collapsable Navbar fixed and working, nav font on home image changed

--- a/src/components/HomePage.css
+++ b/src/components/HomePage.css
@@ -1,3 +1,8 @@
 .just-visited {
     font-style: italic;
 }
+
+.just-visited-image {
+    height: 300px;
+    border: 2px solid black;
+}
